# ETFWeeklyReport

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  CLAUDE.md  README.md  README_DEPLOYMENT.md  RENDER_ENV_VARS.md  REPLIT_DEPLOYMENT.md  docker-compose.yml  justfile  package-lock.json  render.yaml  replit.nix  run.sh  stop.sh
backend/: .coverage  .coveragerc  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  backfill_data.py  pyproject.toml  pytest.ini  render-start.sh  requirements-dev.txt  requirements.txt  test_fetch.py
backend/app/: __init__.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py  models.py
backend/config/: stocks.json
backend/data/: data_quality_report.md  etf_data.db
backend/scripts/: check_intraday_data.py  collect_missing_data.py  query_database.py  query_database.sh  security_check.sh  setup-pre-commit.sh  test_ticker_catalog_api.py  validate_data_quality.py
backend/tests/: conftest.py  test_alerts_api.py  test_api.py  test_auth_middleware.py  test_auto_collection.py  test_batch_collection.py  test_batch_queries.py  test_comparison_service.py  test_coverage_improvement.py  test_data_collector.py  test_data_collector_signal.py  test_e2e_scenarios.py  test_etf_fundamentals_collector.py  test_etf_selenium.py  test_fundamentals_db.py  test_insights_service.py  test_metrics_service.py  test_naver_finance_scraper.py  test_news.py  test_postgres_specific.py  test_rate_limiter.py  test_rate_limiting.py  test_retry.py  test_scanner_freshness.py  test_scanner_price_collection.py  test_scanner_ytd_cache.py  test_scheduler.py  test_scheduler_signal.py  test_settings_api.py  test_signal_scan.py  (+10 more)
mcp-server/: README.md  pyproject.toml
(+308 files in other folders)
